--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,12 +1,19 @@
 .lmj-banner {
 	color: black;
-	text-align: right;
+	text-align: left;
 	padding: 32px;
 	border-bottom: solid 3px black;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
 	flex-direction: row;
 	align-items: center;
+}
+
+.logoBan{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+
 }
 
 .lmj-title {
